[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "inpainting"
version = "0.0.0"               # will be overwritten by poetry-dynamic-versioning but needs to be set
description ="Official package to compute metrics for the BraTS inpainting challenge."
license = "AGPL-3.0"

authors = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

maintainers = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

readme = "README.md"
repository = "https://github.com/BrainLesion/inpainting"
#documentation = ""

[tool.poetry.dependencies]
torchmetrics = ">=1.1.2"
python = ">=3.10"
nibabel = ">=3.0"
numpy = ">=1.25"
torch = ">=2.0.1"
# tifffile = ">2023.8.25"
# path = "^16.7.1"
# Pillow = "^10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
